[FIX] : Swagger also change about exceptions and its messages.
